Grammar/tests/unity/error/struct-extends-multiples.top
struct ComputerStudents extends StudentsDexa, StudentsDtec {
    float algorithm, compiler;
}